--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,8 @@
 <h1>Weather API</h1>
 <p>URL format: http://127.0.0.1:5000/api/v1/station/date</p>
 <p>URL format: http://127.0.0.1:5000/api/v1/10/1988-10-23</p>
-
+<br>
+<p>Station codes are given below</p>
+<p>{{data|safe}}</p>
 </body>
 </html>
