Day 31: Add URL endpoints for yearly and all data

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,8 +9,9 @@
 <h1>Weather API</h1>
 <p>URL format: http://127.0.0.1:5000/api/v1/station/date</p>
 <p>URL format: http://127.0.0.1:5000/api/v1/10/1988-10-23</p>
-<br>
-<p>Station codes are given below</p>
+<p>URL Example for one station on all dates: http://127.0.0.1:5000/api/v1/10</p>
+<p>URL Example for one station in one year: http://127.0.0.1:5000/api/v1/yearly/10/1988</p>
+
 <p>{{data|safe}}</p>
 </body>
 </html>
